# SwinkVideo

./: CMakeLists.txt  README.md  SwinkVideo.git.kdev4
SwinkIt/: BC_ADD_LZ4.hpp  CMakeLists.txt  FrameBuffer.hpp  PrevFrames.hpp  SwinkFileWriter.hpp  config.c  config.h  main.cpp  ppplanar.hpp
SwinkIt/nc/: CMakeLists.txt  close.c  expand_ctx.c  frctx.c  good_ext.c  mkctx.c  nc.h  nc2.c  nc_intern.h  open.c  package.c  read.c  rewind.c  scratch.c
SwinkPlayer/: CMakeLists.txt  CompressedFrameBuffer.hpp  FFMPEGReader.hpp  SwinkFileReader.hpp  gl_program.c  gl_texture.c  gl_vbuffer.c  main.cpp  vadd.cpp
